--- a/.github/workflows/build-ttyd.yml
+++ b/.github/workflows/build-ttyd.yml
@@ -4,9 +4,15 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: false
+        default: 'false'
 
 permissions:
   contents: write
+  packages: read
 
 env:
   TZ: Asia/Shanghai
@@ -15,78 +21,218 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Install build dependencies
         run: |
+          sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php /usr/local/lib/android
           sudo apt-get update -qq
           sudo apt-get install -y \
-            build-essential gawk gettext libncurses5-dev unzip \
-            zlib1g-dev libssl-dev python3 rsync wget git cmake ninja-build
+            build-essential ccache file g++ gawk gettext git \
+            libncurses5-dev libncursesw5-dev libssl-dev \
+            python3 python3-pip python3-setuptools rsync unzip wget \
+            zlib1g-dev zstd cmake ninja-build
 
       - name: Download and extract OpenWrt SDK
         run: |
           wget -q ${{ env.SDK_URL }}
+          file_name=$(echo ${{ env.SDK_URL }} | awk -F/ '{print $NF}')
           mkdir sdk
-          tar -xJf openwrt-sdk-*.tar.xz -C sdk --strip-components=1
+          if [[ $file_name == *.tar.xz ]]; then
+            tar -xJf $file_name -C ./sdk --strip-components=1
+          elif [[ $file_name == *.tar.zst ]]; then
+            tar --zstd -x -f $file_name -C ./sdk --strip-components=1
+          else
+            echo "Unsupported file format: $file_name"
+            exit 1
+          fi
           echo "SDK_DIR=$PWD/sdk" >> $GITHUB_ENV
 
       - name: Copy custom packages
         run: |
-          cp -r libwebsockets-full $SDK_DIR/package/
-          cp -r ttyd $SDK_DIR/package/
-          echo "✅ Packages copied"
+          # 检查包目录是否存在
+          if [ -d "libwebsockets-full" ]; then
+            cp -r libwebsockets-full $SDK_DIR/package/
+            echo "✅ libwebsockets-full package copied"
+          else
+            echo "❌ libwebsockets-full directory not found"
+            find . -name "*libwebsockets*" -type d
+            exit 1
+          fi
+          
+          if [ -d "ttyd" ]; then
+            cp -r ttyd $SDK_DIR/package/
+            echo "✅ ttyd package copied"
+          else
+            echo "❌ ttyd directory not found"
+            find . -name "*ttyd*" -type d
+            exit 1
+          fi
+
+      - name: SSH connection to Actions (debug)
+        uses: mxschmitt/action-tmate@v3
+        if: ${{ github.event.inputs.ssh == 'true' }}
 
       - name: Setup feeds and configuration
         run: |
           cd $SDK_DIR
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-          cat > .config <<'EOF'
-CONFIG_TARGET_rockchip_armv8=y
-CONFIG_TARGET_rockchip_armv8_DEVICE_friendlyarm_nanopi-r5s=y
-CONFIG_PACKAGE_libwebsockets-full=m
-CONFIG_PACKAGE_ttyd=m
-CONFIG_AUTOREMOVE=y
-EOF
+          
+          # 完整的配置设置
+          echo "CONFIG_TARGET_rockchip_armv8=y" > .config
+          echo "CONFIG_TARGET_rockchip_armv8_DEVICE_friendlyarm_nanopi-r5s=y" >> .config
+          echo "CONFIG_ALL_NONSHARED=n" >> .config
+          echo "CONFIG_ALL_KMODS=n" >> .config
+          echo "CONFIG_ALL=n" >> .config
+          echo "CONFIG_AUTOREMOVE=y" >> .config
+          echo "CONFIG_PACKAGE_libwebsockets-full=m" >> .config
+          echo "CONFIG_PACKAGE_ttyd=m" >> .config
+          
           make defconfig
 
-      - name: Compile libwebsockets-full (OpenSSL variant)
+      - name: Download package sources
         run: |
           cd $SDK_DIR
+          make package/libwebsockets-full/download V=s
+          make package/ttyd/download V=s
+          find dl -size -1024c -exec ls -l {} \; || true
+
+      - name: Compile libwebsockets-full (OpenSSL variant)
+        id: compile_libwebsockets
+        run: |
+          cd $SDK_DIR
+          echo "🚀 Starting libwebsockets-full compilation..."
           make package/libwebsockets-full/clean V=s
           make package/libwebsockets-full/compile BUILD_VARIANT=openssl -j$(nproc) V=s
+          echo "status=success" >> $GITHUB_OUTPUT
 
       - name: Compile ttyd
+        id: compile_ttyd
         run: |
           cd $SDK_DIR
+          echo "🚀 Starting ttyd compilation..."
           make package/ttyd/clean V=s
           make package/ttyd/compile -j$(nproc) V=s
+          echo "status=success" >> $GITHUB_OUTPUT
+          echo "FIRMWARE=$PWD" >> $GITHUB_ENV
 
       - name: Collect build artifacts
+        if: steps.compile_libwebsockets.outputs.status == 'success' && steps.compile_ttyd.outputs.status == 'success'
         run: |
           cd $SDK_DIR
           mkdir -p upload
-          find bin -name "*ttyd*.ipk" -exec cp {} upload/ \;
-          find bin -name "*libwebsockets*.ipk" -exec cp {} upload/ \;
-          ls -lh upload
+          
+          # 查找所有相关的 IPK 文件
+          echo "=== Searching for IPK files ==="
+          find bin -name "*ttyd*.ipk" -type f | while read file; do
+            echo "Found ttyd IPK: $file"
+            cp "$file" upload/
+          done
+          
+          find bin -name "*libwebsockets*.ipk" -type f | while read file; do
+            echo "Found libwebsockets IPK: $file"
+            cp "$file" upload/
+          done
+          
+          # 查找二进制文件
+          echo "=== Searching for binary files ==="
+          find build_dir -name "ttyd" -type f | while read file; do
+            if file "$file" | grep -q "ELF"; then
+              echo "Found ELF binary: $file"
+              cp "$file" upload/ttyd
+              chmod +x upload/ttyd
+              break
+            fi
+          done
+          
+          echo "📁 Upload directory contents:"
+          ls -la upload/
+          echo "📊 File details:"
+          file upload/* 2>/dev/null || echo "No files in upload directory"
 
-      - name: Generate release notes
+      - name: Generate release info
+        if: steps.compile_libwebsockets.outputs.status == 'success' && steps.compile_ttyd.outputs.status == 'success'
         run: |
           cd $SDK_DIR
-          cat > upload/RELEASE_INFO.md <<'EOF'
-## 🌐 TTYD (HTTPS/TLS) Build for RK3568
+          cat > upload/RELEASE_INFO.md << 'EOF'
+          ## 🌐 TTYD (HTTPS/TLS) Build for RK3568
+          
+          ### Build Information
+          - **Build Date**: $(date)
+          - **Target**: OpenWrt 23.05.3 (Rockchip ARMv8)
+          - **Repository**: ${{ github.repository }}
+          - **Commit**: ${{ github.sha }}
+          
+          ### Packages Included
+          - **ttyd** - Share your terminal over the web with TLS/SSL support
+          - **libwebsockets-full** - Full WebSocket library with OpenSSL support
+          
+          ### Installation Instructions
+          1. Upload the IPK files to your OpenWrt device
+          2. Install packages:
+          ```bash
+          opkg install libwebsockets-full_*.ipk
+          opkg install ttyd_*.ipk
+          ```
+          
+          3. Generate SSL certificates and start HTTPS server:
+          ```bash
+          # Create SSL directory
+          mkdir -p /etc/ssl
+          
+          # Generate self-signed certificate (valid for 365 days)
+          openssl req -x509 -newkey rsa:2048 \
+            -keyout /etc/ssl/ttyd.key \
+            -out /etc/ssl/ttyd.crt \
+            -days 365 -nodes \
+            -subj '/CN=localhost'
+            
+          # Start ttyd with SSL
+          ttyd --ssl --ssl-cert /etc/ssl/ttyd.crt --ssl-key /etc/ssl/ttyd.key bash
+          ```
+          
+          4. Access via browser: `https://your-device-ip:7681`
+          
+          ### File List
+          EOF
+          
+          echo "\`\`\`" >> upload/RELEASE_INFO.md
+          ls -la upload/ >> upload/RELEASE_INFO.md
+          echo "\`\`\`" >> upload/RELEASE_INFO.md
 
-**Build Date:** $(date)
-**Target:** OpenWrt 23.05.3 (Rockchip ARMv8)
-**Packages:**
-- ttyd (with TLS/SSL support)
-- libwebsockets-full (OpenSSL)
+      - name: Create GitHub Release
+        if: steps.compile_libwebsockets.outputs.status == 'success' && steps.compile_ttyd.outputs.status == 'success'
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: "ttyd-https-$(date +%Y%m%d-%H%M%S)"
+          name: "TTYD HTTPS Build $(date +'%Y-%m-%d %H:%M')"
+          body_path: ${{ env.SDK_DIR }}/upload/RELEASE_INFO.md
+          files: |
+            ${{ env.SDK_DIR }}/upload/*.ipk
+            ${{ env.SDK_DIR }}/upload/ttyd
+          prerelease: true
+          draft: false
 
-### Installation
-1. Upload the IPK files to your device
-2. Run:
-```bash
-opkg install libwebsockets-full_*.ipk ttyd_*.ipk
+      - name: Upload artifacts to GitHub
+        uses: actions/upload-artifact@v4
+        with:
+          name: ttyd-https-packages
+          path: |
+            ${{ env.SDK_DIR }}/upload/*.ipk
+            ${{ env.SDK_DIR }}/upload/ttyd
+          if-no-files-found: warn
+
+      - name: Debug build directory structure
+        if: always()
+        run: |
+          cd $SDK_DIR
+          echo "🔍 Debugging build directory structure..."
+          echo "=== All IPK files ==="
+          find bin -name "*.ipk" -type f | head -20
+          echo "=== Build directories ==="
+          find build_dir -name "*ttyd*" -type d | head -10
+          find build_dir -name "*libwebsockets*" -type d | head -10
