--- a/ttyd/files/ttyd.config
+++ b/ttyd/files/ttyd.config
@@ -1,3 +1,16 @@
 config ttyd
-	option interface '@lan'
-	option command '/bin/login'
+    option enable '0'
+    option command '/bin/login'
+    option port '7681'
+    option ssl '0'
+    option ssl_cert '/etc/luci-uploads/cbid.uhttpd.main.cert'
+    option ssl_key '/etc/luci-uploads/cbid.uhttpd.main.key'
+    option username 'admin'
+    option password 'password'
+    option debug '2'
+
+config ssl
+    option days '365'
+    option bits '2048'
+    option country 'CN'
+    option commonname 'myrouter.local'
