--- a/ttyd/files/ttyd.config
+++ b/ttyd/files/ttyd.config
@@ -13,4 +13,4 @@ config ssl
     option days '365'
     option bits '2048'
     option country 'CN'
-    option commonname 'myrouter.local'
+    option commonname 'NingXia'
