--- a/ttyd/files/ttyd.config
+++ b/ttyd/files/ttyd.config
@@ -1,16 +1,16 @@
-config ttyd
-    option enable '0'
-    option command '/bin/login'
-    option port '7681'
-    option ssl '0'
-    option ssl_cert '/etc/luci-uploads/cbid.uhttpd.main.cert'
-    option ssl_key '/etc/luci-uploads/cbid.uhttpd.main.key'
-    option username 'admin'
-    option password 'password'
-    option debug '2'
+config server 'server'
+	option ssl '1'
+	option ssl_cert '/etc/ttyd/ttyd.crt'
+	option ssl_key '/etc/ttyd/ttyd.key'
+	option port '7681'
+	option check_origin '0'
+	option max_clients '10'
+	option readonly '0'
+	option debug '1 2'
+	option credential '0'
 
-config ssl
-    option days '365'
-    option bits '2048'
-    option country 'CN'
-    option commonname 'NingXia'
+config ssl 'ssl'
+	option days '730'
+	option bits '2048'
+	option country 'CN'
+	option commonname 'Ningxia'
