--- a/ttyd/files/ttyd.config
+++ b/ttyd/files/ttyd.config
@@ -1,7 +1,7 @@
 config server 'server'
 	option ssl '1'
-	option ssl_cert '/etc/ttyd/ttyd.crt'
-	option ssl_key '/etc/ttyd/ttyd.key'
+	option ssl_cert '/etc/luci-uploads/cbid.uhttpd.main.cert'
+	option ssl_key '/etc/luci-uploads/cbid.uhttpd.main.key'
 	option port '7681'
 	option check_origin '0'
 	option max_clients '10'
