--- a/ttyd/files/ttyd.config
+++ b/ttyd/files/ttyd.config
@@ -2,6 +2,7 @@ config server 'server'
 	option ssl '1'
 	option ssl_cert '/etc/luci-uploads/cbid.uhttpd.main.cert'
 	option ssl_key '/etc/luci-uploads/cbid.uhttpd.main.key'
+	option interface 'lan'
 	option port '7681'
 	option check_origin '0'
 	option max_clients '10'
